Passing password by env

--- a/.env
+++ b/.env
@@ -18,3 +18,7 @@
 APP_ENV=dev
 APP_SECRET=
 ###< symfony/framework-bundle ###
+
+#APPLICATION PASSWORD FOR BLUESKY 
+#DON'T USE YOUR OWN PASSWORD DIRECTLY
+PASSWORD_API=xxxx-xxxx-xxxx-xxxx
