--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "nyholm/psr7": "^1.8",
+        "php-http/guzzle7-adapter": "^1.1",
+        "php-weather/open-meteo": "^0.3.2",
         "potibm/phluesky": "^0.5.0",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
