--- a/.env
+++ b/.env
@@ -22,3 +22,9 @@ APP_SECRET=
 #APPLICATION PASSWORD FOR BLUESKY 
 #DON'T USE YOUR OWN PASSWORD DIRECTLY
 PASSWORD_API=xxxx-xxxx-xxxx-xxxx
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
