--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.2.*",
         "symfony/http-client": "^7.2",
+        "symfony/messenger": "7.2.*",
         "symfony/runtime": "7.2.*",
+        "symfony/scheduler": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
         "symfony/yaml": "7.2.*"
     },
