--- a/.env
+++ b/.env
@@ -22,6 +22,7 @@ APP_SECRET=
 #APPLICATION PASSWORD FOR BLUESKY 
 #DON'T USE YOUR OWN PASSWORD DIRECTLY
 PASSWORD_API=xxxx-xxxx-xxxx-xxxx
+JSON_PATH=/to/your/file.json
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
