--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,21 @@
         "nyholm/psr7": "^1.8",
         "php-http/guzzle7-adapter": "^1.1",
         "php-weather/open-meteo": "^0.3.2",
+        "phpdocumentor/reflection-docblock": "^5.6",
+        "phpstan/phpdoc-parser": "^2.1",
         "potibm/phluesky": "^0.5.0",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
+        "symfony/filesystem": "7.2.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.2.*",
         "symfony/http-client": "^7.2",
         "symfony/messenger": "7.2.*",
+        "symfony/property-access": "7.2.*",
+        "symfony/property-info": "7.2.*",
         "symfony/runtime": "7.2.*",
         "symfony/scheduler": "7.2.*",
+        "symfony/serializer": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
         "symfony/yaml": "7.2.*"
     },
