--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     app.passwordapi: '%env(PASSWORD_API)%'
+    app.jsonpath: '%env(JSON_PATH)%'
 
 services:
     # default configuration for services in *this* file
