--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,3 +24,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Service\BlueService:
+        arguments:
+            $account: '%env(ACCOUNT_API)%'
+            $password: '%env(PASSWORD_API)%'
